force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/KimbleOne__ActivityAssignmentTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Assignment Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>