force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__ActivityAssignmentTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignmentTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Template</label>
    <referenceTo>KimbleOne__ActivityAssignmentTemplate__c</referenceTo>
    <relationshipLabel>Assignment Templates</relationshipLabel>
    <relationshipName>ActivityAssignmentTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>