force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__AssignmentPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentPercentage__c</fullName>
    <label>Assignment Pct</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>