force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__EndDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndDateOffset__c</fullName>
    <label>End Date Offset</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>