force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__EndDateOffsetType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndDateOffsetType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Offset Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>OffsetType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Assignment Templates (End Date Offset Type)</relationshipLabel>
    <relationshipName>AssignmentTemplatesEndOffset</relationshipName>
    <type>Lookup</type>
</CustomField>