force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__EntryUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EntryUnits__c</fullName>
    <label>Entry Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>