force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__IsFixedUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsFixedUsage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Obsolete - IsFixed Usage</label>
    <type>Checkbox</type>
</CustomField>