force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__IsFrameworkAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsFrameworkAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Framework Assignment</label>
    <type>Checkbox</type>
</CustomField>