force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__IsModelAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsModelAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Model Assignment</label>
    <type>Checkbox</type>
</CustomField>