force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__IsResourcedGroupAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsResourcedGroupAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resourced Group Assignment</label>
    <type>Checkbox</type>
</CustomField>