force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__Notes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Notes__c</fullName>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>