force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__Resource__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>KimbleOne__Resource__c</referenceTo>
    <relationshipName>ActivityAssignmentTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>