force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__StartDateOffsetType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDateOffsetType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Start Offset Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>OffsetType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Assignment Templates</relationshipLabel>
    <relationshipName>AssignmentTemplatesStartOffset</relationshipName>
    <type>Lookup</type>
</CustomField>