force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/fields/KimbleOne__UsageBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Behaviour Rule</label>
    <referenceTo>KimbleOne__UsageBehaviourRule__c</referenceTo>
    <relationshipLabel>Assignment Templates</relationshipLabel>
    <relationshipName>AssignmentTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>