force-app/main/default/objects/KimbleOne__ActivityAssignmentTemplate__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Product__c</columns>
    <columns>KimbleOne__Resource__c</columns>
    <columns>KimbleOne__UsageBehaviourRule__c</columns>
    <columns>KimbleOne__AssignmentPercentage__c</columns>
    <columns>KimbleOne__EntryUnits__c</columns>
    <columns>KimbleOne__UtilisationPercentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>